--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="BigMomma">
         <div class="fotocontainer">
             <div class= "imagen">
-                <img src="./img/bauti cabral.jpg.jfif" alt="Foto de bauti">
+                <img src="./img/cabral.jpg" alt="Foto de bauti">
             </div>
             <div class="links">
                 <ul class="links-ul">
-                    <li class="primer-li-links"><a href="/estudios.html">Estudios</a></li>
+                    <li class="primer-li-links"><a href="/estudios.html"><div class="Boton3">Estudios</div></a></li>
                     <li><a href="/competencia.html"><div class="Boton">Competencias</div></a></li>
-                    <li><a href="/conocimientos.html">Conocimientos</a></li>
+                    <li><a href="/conocimientos.html"><div class="Boton">Conocimientos</div></a></li>
                 </ul>
             </div>
         
