--- a/competencia.html
+++ b/competencia.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/StylesCompetencia.css">
+    <link rel="stylesheet" href="./StylesCompetencia.css">
     <title>Competencia</title>
 </head>
 
 <body>
     <div class="R1">
         <h1>Curriculum Vitae-Bautista Daniel Cabral</h1>
-    </div>
-
-    
+    </div> 
     <div class="BigMomma">
         <div class="fotocontainer">
             <div class= "imagen">
-                <img src="./img/cabral.jpg" alt="Foto de bauti">
+                <img src="./cabral.jpg" alt="Foto de bauti">
             </div>
             <div class="links">
                 <ul class="links-ul">
