--- a/conocimientos.html
+++ b/conocimientos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" href="./styles/StyleConocimientos.css">
+    <link  rel="stylesheet" href="./StyleConocimientos.css">
     <title>Conocimientos</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <div class="BigMomma">
         <div class="fotocontainer">
             <div class= "imagen">
-                <img src="./img/cabral.jpg" alt="Foto de bauti">
+                <img src="./cabral.jpg" alt="Foto de bauti">
             </div>
             <div class="links">
                 <ul class="links-ul">
