--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
           
 <footer>
-    <p>bauticabral@gmail.com / bacabral@uade.edu.ar</p>
+    <p>Todos los derechos reservados</p>
 </footer>
 </body>
 </html>
