--- a/estudios.html
+++ b/estudios.html
@@ -39,7 +39,7 @@
     </div>
 
 <footer>
-        <p>bauticabral@gmail.com / bacabral@uade.edu.ar</p>
+    <p>Todos los derechos reservados</p>
 </footer>
     
 </body>
