--- a/competencia.html
+++ b/competencia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./StylesCompetencia.css">
+    <link rel="stylesheet" href="StylesCompetencia.css">
     <title>Competencia</title>
 </head>
 
@@ -15,13 +15,13 @@
     <div class="BigMomma">
         <div class="fotocontainer">
             <div class= "imagen">
-                <img src="./cabral.jpg" alt="Foto de bauti">
+                <img src="Cabral.jpg" alt="Foto de bauti">
             </div>
             <div class="links">
                 <ul class="links-ul">
-                    <li class="primer-li-links"><a href="/estudios.html"><div class="Boton3">Estudios</div></a></li>
-                    <li><a href="/conocimientos.html"><div class="Boton">Conocimientos</div></a></li>
-                    <li><a href="/index.html"><div class=Boton2>Datos Personales</div></a></li>
+                    <li class="primer-li-links"><a href="estudios.html"><div class="Boton3">Estudios</div></a></li>
+                    <li><a href="conocimientos.html"><div class="Boton">Conocimientos</div></a></li>
+                    <li><a href="index.html"><div class=Boton2>Datos Personales</div></a></li>
                 </ul>
             </div>
         
