--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" href="./styles.css">
+    <link  rel="stylesheet" href="styles.css">
     
     <title>Curriculum Vitae</title>
 </head>
@@ -17,13 +17,13 @@
     <div class="BigMomma">
         <div class="fotocontainer">
             <div class= "imagen">
-                <img src="./cabral.jpg" alt="Foto de bauti">
+                <img src="Cabral.jpg" alt="Foto de bauti">
             </div>
             <div class="links">
                 <ul class="links-ul">
-                    <li class="primer-li-links"><a href="/estudios.html"><div class="Boton3">Estudios</div></a></li>
-                    <li><a href="/competencia.html"><div class="Boton">Competencias</div></a></li>
-                    <li><a href="/conocimientos.html"><div class="Boton">Conocimientos</div></a></li>
+                    <li class="primer-li-links"><a href="estudios.html"><div class="Boton3">Estudios</div></a></li>
+                    <li><a href="competencia.html"><div class="Boton">Competencias</div></a></li>
+                    <li><a href="conocimientos.html"><div class="Boton">Conocimientos</div></a></li>
                 </ul>
             </div>
         
